--- a/src/main/webapp/WEB-INF/views/province/delete.html
+++ b/src/main/webapp/WEB-INF/views/province/delete.html
@@ -10,7 +10,7 @@
 <p>
     <a href="/provinces">Province list</a>
 </p>
-<form th:action="@{/delete-province}" th:object="${province}" method="post">
+<form th:action="@{/provinces/delete}" th:object="${province}" method="post">
     <input th:type="hidden" name="id" th:field="*{id}">
     <table>
         <tr>
