--- a/src/main/webapp/WEB-INF/views/create.html
+++ b/src/main/webapp/WEB-INF/views/create.html
@@ -12,8 +12,13 @@
 <th:block th:if="${message}">
     <p th:text="${message}"></p>
 </th:block>
-<form th:action="@{/create-customer}" th:object="${customer}" method="post">
+<form th:action="@{/customers/create}" th:object="${customer}" method="post"
+      enctype="multipart/form-data">
     <table>
+        <tr>
+            <td>Image:</td>
+            <td><input type="file" th:field="*{image}"/></td>
+        </tr>
         <tr>
             <td>First name:</td>
             <td><input type="text" th:field="*{firstName}"/></td>
