--- a/src/main/webapp/WEB-INF/views/province/create.html
+++ b/src/main/webapp/WEB-INF/views/province/create.html
@@ -12,7 +12,7 @@
 <th:block th:if="${message}">
     <p th:text="${message}"></p>
 </th:block>
-<form th:action="@{/create-province}" th:object="${province}" method="post">
+<form th:action="@{/provinces/create}" th:object="${province}" method="post">
     <table>
         <tr>
             <td>Name:</td>
