--- a/src/main/webapp/WEB-INF/views/province/edit.html
+++ b/src/main/webapp/WEB-INF/views/province/edit.html
@@ -12,7 +12,7 @@
 <th:block th:if="${message}">
     <p th:text="${message}"></p>
 </th:block>
-<form th:action="@{/edit-province}" th:object="${province}" method="post">
+<form th:action="@{/provinces/edit}" th:object="${province}" method="post">
     <input th:type="hidden" name="id" th:field="*{id}">
     <table>
         <tr>
