--- a/src/main/webapp/WEB-INF/views/province/list.html
+++ b/src/main/webapp/WEB-INF/views/province/list.html
@@ -5,7 +5,7 @@
     <title>Provinces</title>
 </head>
 <body>
-<a href="/create-province">Create new province</a>
+<a href="/provinces/create">Create new province</a>
 <h1>Provinces</h1>
 <table border="1">
     <tr>
@@ -16,10 +16,13 @@
     <th:block th:each="province : ${provinces}">
         <tr>
             <td th:text="${province.name}"></td>
-            <td><a th:href="@{/edit-province/__${province.id}__ }">Edit</a></td>
-            <td><a th:href="@{/delete-province/__${province.id}__ }">Delete</a></td>
+            <td><a th:href="@{/provinces/edit/__${province.id}__ }">Edit</a></td>
+            <td><a th:href="@{/provinces/delete/__${province.id}__ }">Delete</a></td>
         </tr>
     </th:block>
 </table>
+<p>
+    <a href="/customers">Customer list</a>
+</p>
 </body>
 </html>
