add AJAX on DELETE province

--- a/src/main/webapp/WEB-INF/views/province/delete.html
+++ b/src/main/webapp/WEB-INF/views/province/delete.html
@@ -19,7 +19,7 @@
         </tr>
         <tr>
             <td></td>
-            <td><input type="submit" value="Delete province"></td>
+            <td><input class="deleteProvince" type="submit" value="Delete province"></td>
         </tr>
     </table>
 </form>
